; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_rpc_transport.c_get_authvalue.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_rpc_transport.c_get_authvalue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HTTP_QUERY_WWW_AUTHENTICATE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64, i32*, i64)* @get_authvalue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_authvalue(i32 %0, i64 %1, i32* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i64 %1, i64* %7, align 8
  store i32* %2, i32** %8, align 8
  store i64 %3, i64* %9, align 8
  store i64 0, i64* %11, align 8
  br label %12

12:                                               ; preds = %27, %4
  %13 = load i64, i64* %9, align 8
  store i64 %13, i64* %10, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @HTTP_QUERY_WWW_AUTHENTICATE, align 4
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @HttpQueryInfoW(i32 %14, i32 %15, i32* %16, i64* %10, i64* %11)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %21, label %19

19:                                               ; preds = %12
  %20 = load i32, i32* @FALSE, align 4
  store i32 %20, i32* %5, align 4
  br label %30

21:                                               ; preds = %12
  %22 = load i32*, i32** %8, align 8
  %23 = call i64 @auth_scheme_from_header(i32* %22)
  %24 = load i64, i64* %7, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %21
  br label %28

27:                                               ; preds = %21
  br label %12

28:                                               ; preds = %26
  %29 = load i32, i32* @TRUE, align 4
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %28, %19
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @HttpQueryInfoW(i32, i32, i32*, i64*, i64*) #1

declare dso_local i64 @auth_scheme_from_header(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
